--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -13,6 +13,36 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Fichiers d%27en-tête\entity">
+      <UniqueIdentifier>{d75a8329-4ee2-4ca9-9f5f-b75fe6f38564}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers d%27en-tête\entity\movable">
+      <UniqueIdentifier>{204c0fb5-3ab0-4f2d-a811-b27c2e3dd62d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers d%27en-tête\entity\movable\character">
+      <UniqueIdentifier>{22c55f12-c1fe-4477-bd9d-97d3fad989f7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers d%27en-tête\entity\movable\character\enemy">
+      <UniqueIdentifier>{6969af40-e00d-48f0-8672-09b117adea84}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers d%27en-tête\entity\movable\bonus">
+      <UniqueIdentifier>{cca2ec48-299a-4725-a67d-15cfb117fcee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\entity">
+      <UniqueIdentifier>{87aac709-5d88-4503-b1bf-9bc46b7b455a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\entity\movable">
+      <UniqueIdentifier>{223f1f32-9924-41b6-b0b5-1151e4330386}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\entity\movable\character">
+      <UniqueIdentifier>{fd8be05c-af8d-4e89-9fd7-98f121da8482}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\entity\movable\character\enemy">
+      <UniqueIdentifier>{6e6f0581-82d1-4ad4-ad7c-a3bfd62d894a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers sources\entity\movable\bonus">
+      <UniqueIdentifier>{694fa914-1ad9-444d-93d8-a18e316f0ba2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -21,16 +51,118 @@
     <ClCompile Include="Game.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="Testeur.cpp">
+    <ClCompile Include="map.cpp">
       <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="tile.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="base_enemy.cpp">
+      <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="base_tourret.cpp">
+      <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="kamikaze.cpp">
+      <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="boss.cpp">
+      <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="upgraded_turret.cpp">
+      <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="bomb_launcher_bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
+    </ClCompile>
+    <ClCompile Include="bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
+    </ClCompile>
+    <ClCompile Include="laser_bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
+    </ClCompile>
+    <ClCompile Include="nuke_bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
+    </ClCompile>
+    <ClCompile Include="point_bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
+    </ClCompile>
+    <ClCompile Include="vie_bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
+    </ClCompile>
+    <ClCompile Include="character.cpp">
+      <Filter>Fichiers sources\entity\movable\character</Filter>
+    </ClCompile>
+    <ClCompile Include="enemy.cpp">
+      <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="movable.cpp">
+      <Filter>Fichiers sources\entity\movable</Filter>
+    </ClCompile>
+    <ClCompile Include="player_character.cpp">
+      <Filter>Fichiers sources\entity\movable\character</Filter>
+    </ClCompile>
+    <ClCompile Include="entity.cpp">
+      <Filter>Fichiers sources\entity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="Testeur.h">
+    <ClInclude Include="map.h">
       <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="vie_bonus.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="tile.h">
+      <Filter>Fichiers de ressources</Filter>
+    </ClInclude>
+    <ClInclude Include="bomb_launcher_bonus.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="bonus.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="laser_bonus.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="nuke_bonus.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="point_bonus.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="base_enemy.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character\enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="base_turret.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character\enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="boss.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character\enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="enemy.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character\enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="kamikaze.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character\enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="upgraded_turret.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character\enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="character.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character</Filter>
+    </ClInclude>
+    <ClInclude Include="entity.h">
+      <Filter>Fichiers d%27en-tête\entity</Filter>
+    </ClInclude>
+    <ClInclude Include="movable.h">
+      <Filter>Fichiers d%27en-tête\entity\movable</Filter>
+    </ClInclude>
+    <ClInclude Include="player_character.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\character</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
