--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="Fichiers sources\entity\movable\bonus">
       <UniqueIdentifier>{694fa914-1ad9-444d-93d8-a18e316f0ba2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Fichiers sources\Menu">
+      <UniqueIdentifier>{3e4d60f3-cbbb-4ac7-afac-7f0ed2fca0d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Fichiers d%27en-tête\Menu">
+      <UniqueIdentifier>{d8d4050f-ea36-4cfe-87d6-e813b2523323}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -104,6 +110,33 @@
     </ClCompile>
     <ClCompile Include="base_turret.cpp">
       <Filter>Fichiers sources\entity\movable\character\enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\button.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\defeat_screen.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\main_menu.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_factory.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\pause_menu.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\text.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_controller.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\victory_screen.cpp">
+      <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -169,6 +202,36 @@
     </ClInclude>
     <ClInclude Include="file.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Programmation_SideScroller\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\button.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\defeat_screen.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\main_menu.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_controller.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_factory.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\pause_menu.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\text.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\victory_screen.h">
+      <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
