Finished scrolling background works 100% 2h

--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -88,69 +88,69 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\button.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\defeat_screen.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\main_menu.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_controller.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_factory.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\pause_menu.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\text.cpp" />
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\victory_screen.cpp" />
     <ClCompile Include="base_enemy.cpp" />
     <ClCompile Include="base_turret.cpp" />
     <ClCompile Include="bomb_launcher_bonus.cpp" />
     <ClCompile Include="bonus.cpp" />
     <ClCompile Include="boss.cpp" />
+    <ClCompile Include="button.cpp" />
     <ClCompile Include="character.cpp" />
+    <ClCompile Include="defeat_screen.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="kamikaze.cpp" />
     <ClCompile Include="laser_bonus.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main_menu.cpp" />
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="menu.cpp" />
+    <ClCompile Include="menu_controller.cpp" />
+    <ClCompile Include="menu_factory.cpp" />
     <ClCompile Include="movable.cpp" />
     <ClCompile Include="nuke_bonus.cpp" />
+    <ClCompile Include="pause_menu.cpp" />
     <ClCompile Include="player_character.cpp" />
     <ClCompile Include="point_bonus.cpp" />
     <ClCompile Include="scrolling_background.cpp" />
+    <ClCompile Include="text.cpp" />
     <ClCompile Include="tile.cpp" />
     <ClCompile Include="upgraded_turret.cpp" />
+    <ClCompile Include="victory_screen.cpp" />
     <ClCompile Include="vie_bonus.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\TP2\TP2_Programmation_SideScroller\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\button.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\defeat_screen.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\main_menu.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_controller.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_factory.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\pause_menu.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\text.h" />
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\victory_screen.h" />
     <ClInclude Include="base_enemy.h" />
     <ClInclude Include="base_turret.h" />
     <ClInclude Include="bomb_launcher_bonus.h" />
     <ClInclude Include="bonus.h" />
     <ClInclude Include="boss.h" />
+    <ClInclude Include="button.h" />
     <ClInclude Include="character.h" />
+    <ClInclude Include="defeat_screen.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="file.hpp" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="kamikaze.h" />
     <ClInclude Include="laser_bonus.h" />
+    <ClInclude Include="main_menu.h" />
     <ClInclude Include="map.h" />
+    <ClInclude Include="menu.h" />
+    <ClInclude Include="menu_controller.h" />
+    <ClInclude Include="menu_factory.h" />
     <ClInclude Include="movable.h" />
     <ClInclude Include="nuke_bonus.h" />
+    <ClInclude Include="pause_menu.h" />
     <ClInclude Include="pile.hpp" />
     <ClInclude Include="player_character.h" />
     <ClInclude Include="point_bonus.h" />
     <ClInclude Include="scrolling_background.h" />
+    <ClInclude Include="text.h" />
     <ClInclude Include="tile.h" />
     <ClInclude Include="upgraded_turret.h" />
+    <ClInclude Include="victory_screen.h" />
     <ClInclude Include="vie_bonus.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
