--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -114,31 +114,31 @@
     <ClCompile Include="scrolling_background.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\button.cpp">
+    <ClCompile Include="button.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\defeat_screen.cpp">
+    <ClCompile Include="defeat_screen.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\main_menu.cpp">
+    <ClCompile Include="main_menu.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.cpp">
+    <ClCompile Include="menu.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_factory.cpp">
+    <ClCompile Include="menu_controller.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\pause_menu.cpp">
+    <ClCompile Include="menu_factory.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\text.cpp">
+    <ClCompile Include="pause_menu.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_controller.cpp">
+    <ClCompile Include="text.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\victory_screen.cpp">
+    <ClCompile Include="victory_screen.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
   </ItemGroup>
@@ -212,31 +212,31 @@
     <ClInclude Include="..\..\TP2\TP2_Programmation_SideScroller\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\button.h">
+    <ClInclude Include="button.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\defeat_screen.h">
+    <ClInclude Include="defeat_screen.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\main_menu.h">
+    <ClInclude Include="main_menu.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h">
+    <ClInclude Include="menu.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_controller.h">
+    <ClInclude Include="menu_controller.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu_factory.h">
+    <ClInclude Include="menu_factory.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\pause_menu.h">
+    <ClInclude Include="pause_menu.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\text.h">
+    <ClInclude Include="text.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\TP2\TP2_Prog_Nb_2\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\victory_screen.h">
+    <ClInclude Include="victory_screen.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
   </ItemGroup>
