--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -239,5 +239,8 @@
     <ClInclude Include="victory_screen.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
     </ClInclude>
+    <ClInclude Include="liste.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
