--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="victory_screen.cpp">
       <Filter>Fichiers sources\Menu</Filter>
     </ClCompile>
+    <ClCompile Include="input_manager.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -238,6 +241,9 @@
     </ClInclude>
     <ClInclude Include="victory_screen.h">
       <Filter>Fichiers d%27en-tête\Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="input_manager.h">
+      <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
