--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="..\..\TP2\TP2_Programmation_SideScroller\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h" />
     <ClInclude Include="base_enemy.h" />
     <ClInclude Include="base_turret.h" />
+    <ClInclude Include="bitmask_manager.h" />
     <ClInclude Include="bomb_launcher_bonus.h" />
     <ClInclude Include="bonus.h" />
     <ClInclude Include="boss.h" />
