Revert "Merge branch 'master' of https://github.com/titoine9912/TP3ProgJeux"
This reverts commit d408a2b4f34d5cdf101617935806a89a9f260212, reversing
changes made to 14625c507e23c582ec0dd66612fefe0eb9867189.

# Conflicts:
#	TP3ProgJeux/Game.cpp

--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -117,7 +117,6 @@
     <ClCompile Include="player_character.cpp" />
     <ClCompile Include="point_bonus.cpp" />
     <ClCompile Include="projectile.cpp" />
-    <ClCompile Include="projectile_laser.cpp" />
     <ClCompile Include="scrolling_background.cpp" />
     <ClCompile Include="text.cpp" />
     <ClCompile Include="tile.cpp" />
@@ -126,6 +125,7 @@
     <ClCompile Include="vie_bonus.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\TP2\TP2_Programmation_SideScroller\9_1_TP2_SideScrollingFighter\9_1_TP2_SideScrollingFighter\menu.h" />
     <ClInclude Include="base_enemy.h" />
     <ClInclude Include="base_projectile.h" />
     <ClInclude Include="base_turret.h" />
@@ -158,7 +158,6 @@
     <ClInclude Include="player_character.h" />
     <ClInclude Include="point_bonus.h" />
     <ClInclude Include="projectile.h" />
-    <ClInclude Include="projectile_Laser.h" />
     <ClInclude Include="scrolling_background.h" />
     <ClInclude Include="text.h" />
     <ClInclude Include="tile.h" />
