--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="input_manager.cpp" />
     <ClCompile Include="kamikaze.cpp" />
     <ClCompile Include="laser_bonus.cpp" />
+    <ClCompile Include="laser_projectile.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="main_menu.cpp" />
     <ClCompile Include="map.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="input_manager.h" />
     <ClInclude Include="kamikaze.h" />
     <ClInclude Include="laser_bonus.h" />
+    <ClInclude Include="laser_projectile.h" />
     <ClInclude Include="liste.hpp" />
     <ClInclude Include="main_menu.h" />
     <ClInclude Include="map.h" />
