ajout des projectiles automatic, le joueur peut tirer avec un deuxieme canon 1h30

--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClCompile Include="laser_projectile.cpp">
       <Filter>Fichiers sources\entity\movable\Projectile</Filter>
     </ClCompile>
+    <ClCompile Include="automatic_projectile.cpp">
+      <Filter>Fichiers sources\entity\movable\Projectile</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -282,6 +285,9 @@
       <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
     </ClInclude>
     <ClInclude Include="laser_projectile.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
+    </ClInclude>
+    <ClInclude Include="automatic_projectile.h">
       <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
     </ClInclude>
   </ItemGroup>
