--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -88,6 +88,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="automatic_projectile.cpp" />
     <ClCompile Include="base_enemy.cpp" />
     <ClCompile Include="base_projectile.cpp" />
     <ClCompile Include="base_turret.cpp" />
@@ -126,6 +127,7 @@
     <ClCompile Include="vie_bonus.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="automatic_projectile.h" />
     <ClInclude Include="base_enemy.h" />
     <ClInclude Include="base_projectile.h" />
     <ClInclude Include="base_turret.h" />
