--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -162,11 +162,8 @@
     <ClCompile Include="bonus_manager.cpp">
       <Filter>Fichiers sources\entity\movable\bonus</Filter>
     </ClCompile>
-    <ClCompile Include="laser_projectile.cpp">
-      <Filter>Fichiers sources\entity\movable\Projectile</Filter>
-    </ClCompile>
-    <ClCompile Include="automatic_projectile.cpp">
-      <Filter>Fichiers sources\entity\movable\Projectile</Filter>
+    <ClCompile Include="automatic_bonus.cpp">
+      <Filter>Fichiers sources\entity\movable\bonus</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -284,11 +281,8 @@
     <ClInclude Include="vie_bonus.h">
       <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
     </ClInclude>
-    <ClInclude Include="laser_projectile.h">
-      <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
-    </ClInclude>
-    <ClInclude Include="automatic_projectile.h">
-      <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
+    <ClInclude Include="automatic_bonus.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
